# dongles-adventure

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
assets/music/: README.md
docs/superpowers/plans/: 2026-05-03-dongles-adventure.ko.md  2026-05-03-dongles-adventure.md
docs/superpowers/specs/: 2026-05-03-dongles-adventure-design.en.md  2026-05-03-dongles-adventure-design.md
docs/uml/: classes_Dongles.dot  classes_Dongles.mmd  classes_Dongles.puml  packages_Dongles.dot  packages_Dongles.mmd  packages_Dongles.puml
engine/: __init__.py  audio.py  camera.py  highscore.py  input.py  physics.py
entities/: __init__.py  hazards.py  items.py  platforms.py  player.py  player_render.py
scenes/: __init__.py  _hud.py  game.py  gameover.py  menu.py
tests/: test_camera.py  test_difficulty.py  test_generator.py  test_physics.py  test_platforms.py  test_player.py
tools/: generate_placeholder_bgm.py  generate_placeholder_sfx.py
world/: __init__.py  difficulty.py  generator.py  next_hazard.py
